--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -15,6 +15,7 @@ $lineBrownColor: #B0855B;
 $greyBgnd: #F8F8F8;
 $greyColor: #C4C4C4;
 $greyInputBgnd: #eeeeee;
+$greyIconColor: #D5D5D5;
 
 $indent: 50px;
 $items: 3;
