--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -5,7 +5,7 @@
     padding: 10px 20px;
     align-items: center;
     @include mq(tablet) {
-      padding: 100px 10px;
+      padding: 100px 40px;
       display: flex;
       flex-direction: row;
       align-items: flex-start;
@@ -23,15 +23,15 @@
   &__imageWrapper {
     margin-right: 30px;
     position: relative;
-    width: 380px;
-    height: 398px;
+    width: 500px;
+    height: 730px;
     border: 2px solid $lineBrownColor;
     border-radius: 115px 0;
 
     @include mq(tablet) {
       border-radius: 140px 0;
-      width: 417px;
-      height: 700px;
+      width: 500px;
+      height: 730px;
     }
     @include mq(desktop) {
       border-radius: 153px 0;
@@ -41,15 +41,15 @@
   }
   &__image {
     display: block;
-    width: 380px;
+    width: 500px;
     position: absolute;
     border-radius: 105px 0;
     transform: translate(18px, 18px);
 
     @include mq(tablet) {
       border-radius: 124px 0;
-      width: 417px;
-      height: 700px;
+      width: 500px;
+      height: 730px;
       transform: translate(17px, 17px);
     }
     @include mq(desktop) {
@@ -82,11 +82,11 @@
     line-height: 1.5;
     font-weight: 500;
     @include mq(tablet) {
-      font-size: 20px;
+     margin-bottom: 60px;
     }
     @include mq(desktop) {
       font-family: $accentFont;
-      font-size: 20px;
+      
       color: $primaryGreyColor;
       line-height: 1.5;
       font-weight: 500;
@@ -112,11 +112,8 @@
     }
   }
   &__text {
-    font-family: $primaryFont;
-    font-size: 18px;
     color: $primaryGreyColor;
     line-height: 1.66;
-    font-weight: 400;
     text-align: justify;
     margin-bottom: 30px;
     @include mq(desktop) {
@@ -144,6 +141,9 @@
     &:active {
       background-color: $btnHoverColor;
       box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.25);
+    }
+    @include mq(tablet) {
+      font-size: 16px;
     }
     @include mq(desktop) {
       font-size: 16px;
