--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,7 +1,9 @@
 .features {
   &__container {
     padding: 50px 10px;
-
+    @include mq(tablet) {
+      padding: 50px 60px;
+    }
     @include mq(desktop) {
       padding: 50px 0px;
     }
@@ -45,7 +47,7 @@
     @include mq(tablet) {
       display: flex;
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: flex-start;
       align-items: center;
       flex-wrap: wrap;
       margin-bottom: 60px;
@@ -74,7 +76,9 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @include mq(tablet) {
+      margin-left: 20px;
       margin-bottom: 30px;
+      width: 167px;
     }
     @include mq(desktop) {
       &:not(:last-child) {
@@ -106,33 +110,33 @@
   &__div {
     display: flex;
     flex-direction: row;
-    padding-top: 30px;
+    padding: 30px 15px 15px 15px;
     width: 440px;
-    height: 140px;
+    min-height: 140px;
     margin-bottom: 30px;
     border-radius: 60px 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.25);
     @include mq(tablet) {
-      width: 45%;
+      min-height: 235px;
+      width: 46%;
       &:not(:last-child) {
         margin-right: 30px;
       }
     }
     @include mq(desktop) {
-      height: 350px;
+      min-height: 350px;
       padding-right: 20px;
       width: 30%;
       margin-bottom: 85px;
-      // flex-basis: calc((100% - ($indent * ($items - 1))) / $items);
       &:not(:last-child) {
         margin-right: $indent;
       }
     }
   }
   &__svg {
-    margin-left: 47px;
-    margin-right: 18px;
+    margin-left: 30px;
+    margin-right: 15px;
   }
   &__textDiv {
     width: 300px;
