--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,4 +1,12 @@
 .form {
+  &__container{
+    @include mq(tablet) {
+      padding: 70px 70px 105px 70px;
+    }
+    @include mq(desktop) {
+   
+    }
+  }
   &__title {
     position: relative;
     font-family: $accentFont;
@@ -25,10 +33,7 @@
     }
   }
   &__text {
-    font-family: $primaryFont;
     color: $primaryGreyColor;
-    font-size: 18px;
-    font-weight: 400;
     line-height: 1.6;
     margin-left: auto;
     margin-right: auto;
@@ -79,9 +84,8 @@
     align-items: center;
   }
   &__button {
-   font-family: $primaryFont;
     line-height: 1.37;
-    padding: 20px 35px 10px 48px;
+    padding: 10px 35px 10px 48px;
     color: #fff;
     background-color: #37806b;
     border-radius: 0 0 21px 0;
@@ -89,6 +93,11 @@
     font-weight: 600;
     text-transform: uppercase;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    font-size: 18px;
+    &:hover,
+    &:active {
+      background-color: $btnHoverColor;
+      box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.25);
+    }
+    
   }
 }
