--- a/sass/components/_swiper.scss
+++ b/sass/components/_swiper.scss
@@ -6,22 +6,51 @@
     margin-top: 40px;
   }
   &-slide {
-    font-size: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    @include mq(tablet) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+    @include mq(desktop) {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
   }
+  &__btn-next,
+  &__btn-prev {
+    position: relative;
+    width: 30px;
+    height: 29px;
+    border-radius: 50%;
+    background-color: $whiteColor;
+    box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.25);
+    &:hover,
+    &:active {
+      background-color: $btnBgndColor;
+    }
+  }
+  &__span {
+    position: absolute;
+    font-size: 24px;
+    font-weight: 700;
+    color: $btnBgndColor;
+    left: 26%;
+    top: -11%;
 
-  &-button-next,
-  &-rtl &-button-prev {
-    position: absolute;
+    &:hover,
+    &:focus,
+    &:active {
+      color: $whiteColor;
+    }
   }
-  &-button-prev,
-  &-rtl &-button-next {
-    position: absolute;
-  }
-  &-button-prev {
-    top: 0 !important;
-    left: 100% !important;
+  &-pagination {
+    top: 0;
   }
 }
