--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 1000;
   width: 100%;
   background-color: $whiteColor;
 
@@ -105,17 +105,16 @@
       font-size: 16px;
     }
   }
-}
 
-.progress-container {
-  width: 100%;
-  height: 8px;
-  background: #ccc;
-}
+  &__progressContainer {
+    width: 100%;
+    height: 8px;
+    background: #ccc;
+  }
 
-/* The progress bar (scroll indicator) */
-.progress-bar {
-  height: 8px;
-  background: $btnBgndColor;
-  width: 0%;
+  &__progressBar {
+    height: 8px;
+    background: $btnBgndColor;
+    width: 0%;
+  }
 }
