--- a/sass/components/_experience.scss
+++ b/sass/components/_experience.scss
@@ -1,21 +1,21 @@
 .experience {
   &__container {
     padding: 100px 10px;
+    @include mq(tablet) {
+      padding: 100px 30px 100px 40px;
+    }
+    @include mq(desktop) {
+      padding: 100px 50px;
+    }
+  }
+  &__flex {
     display: flex;
     flex-direction: column;
     @include mq(tablet) {
-      padding: 100px 30px 100px 40px;
-
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-    }
-    @include mq(desktop) {
-      padding: 100px 50px;
-      // display: flex;
-      // flex-direction: row;
-      // justify-content: space-between;
     }
   }
   &__text {
@@ -37,7 +37,7 @@
     font-weight: 500;
     font-size: 48px;
     line-height: 1.25;
-    width: 425px;
+    margin: 0 AUTO;
     margin-bottom: 30px;
     @include mq(tablet) {
       font-size: 40px;
@@ -56,7 +56,7 @@
     height: 450px;
     border: 2px solid $lineBrownColor;
     border-radius: 124px 0;
-    margin-left: 25px;
+    margin: 0 auto;
 
     @include mq(tablet) {
       border-radius: 90px 0;
@@ -93,19 +93,48 @@
     }
   }
   &__btn {
-    line-height: 1.37;
-    padding: 10px 30px 15px 30px;
-    color: #fff;
-    background-color: #37806b;
-    border-radius: 21px 0;
-    border: none;
-    font-weight: 700;
-    text-transform: uppercase;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:active {
-      background-color: $btnHoverColor;
-      box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.25);
+    display: none;
+    @include mq(tablet) {
+      display: block;
+      line-height: 1.37;
+      padding: 10px 30px 15px 30px;
+      color: #fff;
+      background-color: #37806b;
+      border-radius: 21px 0;
+      border: none;
+      font-weight: 700;
+      text-transform: uppercase;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover,
+      &:active {
+        background-color: $btnHoverColor;
+        box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.25);
+      }
+    }
+  }
+  &__btnMobile {
+    @include mq(mobile) {
+      display: block;
+      margin-top: 50px;
+      margin-right: auto;
+      margin-left: auto;
+      line-height: 1.37;
+      padding: 10px 30px 15px 30px;
+      color: #fff;
+      background-color: #37806b;
+      border-radius: 21px 0;
+      border: none;
+      font-weight: 700;
+      text-transform: uppercase;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover,
+      &:active {
+        background-color: $btnHoverColor;
+        box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.25);
+      }
+    }
+    @include mq(tablet) {
+      display: none;
     }
   }
 }
