--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,16 +1,16 @@
 .form {
-  &__container{
+  &__container {
+    padding: 50px 10px;
     @include mq(tablet) {
       padding: 70px 70px 105px 70px;
     }
     @include mq(desktop) {
-   
     }
   }
   &__title {
     position: relative;
     font-family: $accentFont;
-    font-size: 48px;
+    font-size: 30px;
     font-weight: 500;
     letter-spacing: 0.008em;
     line-height: 0.58;
@@ -19,7 +19,7 @@
     margin-bottom: 75px;
     text-align: center;
     color: $accentBlackColor;
-    width: 705px;
+    width: 500px;
     &::after {
       content: "";
       position: absolute;
@@ -31,6 +31,14 @@
       border-radius: 1px;
       background-color: $greyColor;
     }
+    @include mq(tablet) {
+      width: 705px;
+      font-size: 48px;
+    }
+    @include mq(desktop) {
+      width: 705px;
+      font-size: 48px;
+    }
   }
   &__text {
     color: $primaryGreyColor;
@@ -39,19 +47,26 @@
     margin-right: auto;
     margin-bottom: 36px;
     text-align: center;
-    width: 646px;
+    width: 500px;
   }
   &__label {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    margin-bottom: 58px;
+    align-items: center;
+    @include mq(tablet) {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      margin-bottom: 58px;
+    }
   }
 
   &__nameInput,
   &__surnameInput {
     width: 317px;
     height: 50px;
+    margin-bottom: 30px;
   }
   &__nameInput,
   &__surnameInput,
@@ -62,12 +77,19 @@
     border-radius: 24px 0;
   }
   &__emailInput {
-    width: 744px;
+    width: 500px;
     height: 50px;
-    margin-bottom: 92px;
+    margin-bottom: 30px;
+    @include mq(tablet) {
+      width: 744px;
+      height: 50px;
+      margin-bottom: 92px;
+    }
   }
   &__nameInput {
-    margin-right: 100px;
+    @include mq(tablet) {
+      margin-right: 100px;
+    }
   }
   &__nameInput::placeholder,
   &__surnameInput,
@@ -98,6 +120,5 @@
       background-color: $btnHoverColor;
       box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.25);
     }
-    
   }
 }
