--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,7 +1,12 @@
 .slider {
   &__container {
-    padding: 63px 70px 245px 70px;
-   
+    padding: 60px 10px;
+    @include mq(tablet) {
+      padding: 63px 70px 245px 70px;
+    }
+    @include mq(desktop) {
+      padding: 60px 50px 235px 50px;
+    }
   }
 
   &__wrapper {
@@ -54,24 +59,34 @@
     justify-content: space-between;
     align-items: center;
     margin-left: auto;
+    margin-top: 30px;
     margin-bottom: 30px;
-    margin-bottom: 85px;
-    margin-right: 50px;
+    @include mq(tablet) {
+      margin-bottom: 85px;
+      margin-right: 50px;
+    }
+    @include mq(desktop) {
+      margin-right: 240px;
+    }
   }
 
   &__div {
     position: relative;
     display: flex;
     flex-direction: row;
-    padding-top: 30px;
-    width: 570px;
+    padding-top: 13px;
+    width: 470px;
     height: 226px;
     margin-bottom: 30px;
+    margin-left: 55px;
     border-radius: 60px 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 2px 2px 24px 1px rgba(0, 0, 0, 0.25);
     @include mq(tablet) {
+      padding-top: 30px;
       width: 50%;
+      margin-bottom: 0;
+      margin-left: 65px;
       margin-top: 30px;
       margin-bottom: 70px;
     }
@@ -125,19 +140,38 @@
     position: absolute;
     width: 130px;
     height: 130px;
-    transform: translate(-65px, 22px);
+    top: 36px;
+    left: -69px;
+    @include mq(tablet) {
+      position: absolute;
+      top: 36px;
+      left: -69px;
+    }
+    @include mq(desktop) {
+      position: absolute;
+      top: 36px;
+      left: -69px;
+    }
   }
 
   &__textDiv {
-    margin-left: 15%;
+    margin-left: 18%;
     margin-top: 18px;
     position: relative;
+    @include mq(tablet) {
+      margin-left: 15%;
+    }
   }
   &__quotation {
     position: absolute;
     width: 38px;
-    height: 36px;
-    top: 40px;
-    right: 40px;
+    height: 33px;
+    top: 18px;
+    right: 20px;
+    @include mq(tablet) {
+      height: 36px;
+      top: 40px;
+      right: 40px;
+    }
   }
 }
