--- a/sass/components/_blog.scss
+++ b/sass/components/_blog.scss
@@ -2,13 +2,10 @@
   background-color: $greyBgnd;
   &__container {
     padding: 50px 10px;
-  
-  @include mq(tablet) {
-    padding: 90px 70px 125px 70px;
+    @include mq(tablet) {
+      padding: 90px 70px 125px 70px;
+    }
   }
-  @include mq(desktop) {
-  }
-}
 
   &__text {
     margin-bottom: 90px;
@@ -19,6 +16,7 @@
     margin-bottom: 10px;
     text-align: center;
   }
+
   &__title {
     font-family: $accentFont;
     font-size: 30px;
@@ -34,6 +32,7 @@
       font-size: 48px;
     }
   }
+
   &__row {
     display: flex;
     flex-direction: column;
@@ -43,6 +42,7 @@
       justify-content: center;
     }
   }
+
   &__column {
     margin-top: 90px;
     margin-right: auto;
@@ -64,6 +64,7 @@
       align-items: center;
     }
   }
+
   &__divDecor {
     position: relative;
     width: 490px;
@@ -73,7 +74,6 @@
     margin-bottom: 30px;
     margin-left: 50px;
     margin-right: auto;
-
     @include mq(tablet) {
       border-radius: 120px 0;
       width: 555px;
@@ -130,7 +130,7 @@
     margin: auto;
     line-height: 1.7;
     padding: 10px 30px 15px 30px;
-    color: #fff;
+    color: $whiteColor;
     background-color: #37806b;
     border-radius: 21px 0;
     border: none;
