--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -21,18 +21,40 @@
       bottom: 70px;
     }
   }
+
   &__container {
-    padding: 35px 10px;
+    padding: 35px 30px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     @include mq(tablet) {
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: flex-start;
+      padding: 95px 10px 60px 20px;
+    }
+    @include mq(desktop) {
+      position: relative;
       padding: 94px 50px;
     }
   }
+
+  &__decor {
+    display: none;
+    @include mq(tablet) {
+      position: absolute;
+      display: block;
+      top: -75px;
+      left: 0;
+    }
+    @include mq(desktop) {
+      position: absolute;
+      top: -75px;
+      left: 0;
+    }
+  }
+
   &__logoWrapper {
     margin-right: 20px;
 
@@ -40,6 +62,7 @@
       margin-right: 42px;
     }
   }
+
   &__logo {
     display: block;
     margin-bottom: 5px;
@@ -47,6 +70,7 @@
       margin-bottom: 12px;
     }
   }
+
   &__image {
     @include mq(tablet) {
       width: 151px;
@@ -65,11 +89,13 @@
       margin-right: 20px;
     }
   }
+
   &__socials h3 {
     @include mq(mobile) {
       margin-bottom: 10px;
     }
   }
+
   &__quickLinks h3,
   &__company h3,
   &__contact h3,
@@ -80,6 +106,7 @@
       font-size: 24px;
     }
   }
+
   &__list {
     margin-top: 10px;
   }
@@ -92,11 +119,22 @@
       font-size: 18px;
     }
   }
+
   &__socials {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    @include mq(tablet) {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    @include mq(desktop) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
+
   &__copyrightText {
     color: $primaryGreyColor;
     text-align: center;
@@ -109,45 +147,46 @@
       padding-top: 14px;
     }
   }
-}
 
-.svg__icon {
-  fill: $whiteColor;
-}
+  .svg__icon {
+    fill: $whiteColor;
+  }
 
-.svg__list {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  align-items: center;
-
-  @include mq(tablet) {
+  .svg__list {
     display: flex;
     justify-content: space-around;
-    flex-direction: row;
-  }
-}
-.svg__item {
-  @include mq(mobile) {
-    margin-bottom: 10px;
-  }
-  @include mq(tablet) {
-    &:not(:last-child) {
-      margin-right: 10px;
+    flex-direction: column;
+    align-items: center;
+    @include mq(tablet) {
+      display: flex;
+      justify-content: space-around;
+      flex-direction: row;
     }
   }
-}
-.svg__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 37px;
-  height: 37px;
-  border-radius: 50%;
-  background-color: $greyIconColor;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    background-color: $btnBgndColor;
+
+  .svg__item {
+    @include mq(mobile) {
+      margin-bottom: 10px;
+    }
+    @include mq(tablet) {
+      &:not(:last-child) {
+        margin-right: 10px;
+      }
+    }
+  }
+
+  .svg__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 37px;
+    height: 37px;
+    border-radius: 50%;
+    background-color: $greyIconColor;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      background-color: $btnBgndColor;
+    }
   }
 }
